--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -66,7 +66,7 @@ header {
     z-index: 100;
     width: 100%;
     box-shadow: 0 14px 16px rgba(0, 0, 0, 0.5);
-    z-index: 20000;
+    z-index: 899; /* Position z-layer under Fontdue cart boxes */ 
   animation: slideDown 0.4s ease-out forwards;
 
 }
