--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1782,7 +1782,7 @@ button:hover {
 /* Extra Small Phones (320–359px) */
 @media (max-width: 359px) { 
     header {
-        background-color: blackl /*brown; /* Testing responsive */
+        background-color: black; /*brown; /* Testing responsive */
     }    
     header .navbar, header .familyName, header .logo {
         display: none;
@@ -1829,7 +1829,7 @@ button:hover {
 /* Small Phones (360–399px) */
 @media (min-width: 360px) and (max-width: 399px) { 
     header {
-        background-color: lightgray; /* Testing responsive */
+        background-color: black; /*lightgray; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -1876,7 +1876,7 @@ button:hover {
 /* Medium Phones (400–479px) */
 @media (min-width: 400px) and (max-width: 479px) { 
     header {
-        background-color: orange; /* Testing responsive */
+        background-color: black; /*orange; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -1923,7 +1923,7 @@ button:hover {
 /* Large Phones (480–599px) */
 @media (min-width: 480px) and (max-width: 599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /*pink; /* Testing responsive */
     }    
     header .navbar, header .familyName {
         display: none;
@@ -1971,7 +1971,7 @@ button:hover {
 /* Small Tablets (600–767px) */
 @media (min-width: 600px) and (max-width: 767px) { 
     header {
-        background-color: gray; /* Testing responsive */
+        background-color: black; /*gray; /* Testing responsive */
     }    
     header .familyName {
         display: none;
@@ -2007,7 +2007,7 @@ button:hover {
 /* Medium Tablets (768–991px) */
 @media (min-width: 768px) and (max-width: 991px) { 
     header {
-        background-color: purple; /* Testing responsive */
+        background-color: black; /*purple; /* Testing responsive */
     }    
     header .familyName .andMore{
         display: none;
@@ -2022,7 +2022,7 @@ button:hover {
 /* Large Tablets / Small Desktop (992–1199px) */
 @media (min-width: 992px) and (max-width: 1199px) { 
     header {
-        background-color: lightgreen; /* Testing responsive */
+        background-color: black; /*lightgreen; /* Testing responsive */
     }    
     fontdue-type-testers .type-tester {
     --type-tester--adjustment: 1;
@@ -2034,7 +2034,7 @@ button:hover {
 /* Desktop (1200–1599px) */
 @media (min-width: 1200px) and (max-width: 1599px) { 
     header {
-        background-color: pink; /* Testing responsive */
+        background-color: black; /*pink; /* Testing responsive */
     }    
     .row {
         width: 1200px;
@@ -2044,7 +2044,7 @@ button:hover {
 /* Large Desktop (1600px+) */
 @media (min-width: 1600px) { 
     header {
-        background-color: yellow; /* Testing responsive */
+        background-color: black; /*yellow; /* Testing responsive */
     }    
     .row {
         width: 1200px;
