--- a/templates/powerlift.html
+++ b/templates/powerlift.html
@@ -127,8 +127,8 @@
                 TYPETR
             </a>
         </div>
-        <div class="familyName upgrade" onclick="document.getElementById('popup').style.display='block'">
-            Upgrade&nbsp;<span class="andMore upgrade-thin">and more...</span>
+        <div class="familyName powerlift-outline" onclick="document.getElementById('popup').style.display='block'">
+            PowerLift&nbsp;<span class="andMore upgrade-thin">and more...</span>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -171,8 +171,8 @@
                 <button class="buy-button upgrade" 
                     type="button"
                     fontdue-click="open-store-modal"
-                    fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
-                    fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                    fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTAyOTI0Mzk1NjA0Ng=="
+                    fontdue-store-select="U2t1OjE5MjA0ODU4NTUxNDQzNTY2OTg="
                     >
                     Add to cart
                 </button>
@@ -187,9 +187,9 @@
                 </div>
             </div>
             <div class="column34 upgrade">
-                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> your typography</span></h1>
+                <h1 class="powerlift size36">PowerLift<span class="powerlift-outline"> for statements</span></h1>
                 <p class="size24">
-                    TYPETR Upgrade is a refined sans-serif built on the subtle translation contrast of a broad-nib pencil, bringing warmth and rhythm to a clean, modern structure. Its extended glyph set supports a wide range of Latin-based languages, while advanced OpenType features—such as alternate forms, <span class="smcp">small caps</span>, and multiple numeral styles (12345 <span class="onum">12345</span> <span class="sups">12345</span> <span class="sinf">12345</span>)—offer designers precise typographic control. Upgrade clarity with character.
+                    TYPETR PowerLift is a bold typeface experiment that pushes the boundaries of extreme weight and visual impact. Designed to explore the limits of black letterforms, PowerLift amplifies contrast, density, and spatial tension to create a typeface that commands attention. With its unapologetically heavy strokes and sculptural presence, PowerLift isn't just a font—it’s a statement of typographic power, ideal for headlines, posters, and design work that demands a dramatic visual voice.
                 </p>
             </div>
         </div>
@@ -198,7 +198,7 @@
     <section class="content"> <!-- Type tester with family name on full width -->
         <div class="row"> 
             <div class="type-tester">
-                <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NDg4MjQ2OTM1ODU2MA=="></fontdue-type-testers>
+                <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ4NTAyOTI0Mzk1NjA0Ng=="></fontdue-type-testers>
             </div>
         </div>
     </section>
@@ -210,8 +210,8 @@
                     <button class="buy-button upgrade" 
                         type="button"
                         fontdue-click="open-store-modal"
-                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
-                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTAyOTI0Mzk1NjA0Ng=="
+                        fontdue-store-select="U2t1OjE5MjA0ODU4NTUxNDQzNTY2OTg="
                         >
                         Add to cart
                     </button>
@@ -222,26 +222,14 @@
             </div>
         </div>
 
-        <div class="row responsiveHide"> <!-- Upgrade type tester -->
+        <div class="row responsiveHide"> <!-- PowerLift type tester -->
             <div class="type-tester">
-                <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="></fontdue-type-testers>
+                <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MTkyMDQ4NTEzMjQ1NzM4ODg4NQ=="></fontdue-type-testers>
             </div>
         </div>
         <div class="row smallWeightTester">
-            <div class="upgrade-thin size80">Upgrade
-            <span class="upgrade-thin-italic size80">Italic</span></div>
-            <div class="upgrade-light size80">Upgrade
-            <span class="upgrade-light-italic size80">Italic</span></div>
-            <div class="upgrade size80">Upgrade
-            <span class="upgrade-italic size80">Italic</span></div>
-            <div class="upgrade-medium size80">Upgrade
-            <span class="upgrade-medium-italic size80">Italic</span></div>
-            <div class="upgrade-semibold size80">Upgrade
-            <span class="upgrade-semibold-italic size80">Italic</span></div>
-            <div class="upgrade-bold size80">Upgrade
-            <span class="upgrade-bold-italic size80">Italic</span></div>
-            <div class="upgrade-black size80">Upgrade
-            <span class="upgrade-black-italic size80">Italic</span></div>
+            <div class="powerlift size80">PowerLift
+            <span class="powerlift-outline size80">Outline</span></div>
         </div>
     </section>
 
@@ -252,15 +240,15 @@
                     <button class="buy-button upgrade" 
                         type="button"
                         fontdue-click="open-store-modal"
-                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
-                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTAyOTI0Mzk1NjA0Ng=="
+                        fontdue-store-select="U2t1OjE5MjA0ODU4NTUxNDQzNTY2OTg="
                         >
                         Add to cart
                     </button>
                 </div>
             </div>
-            <div class="column34 upgrade">
-                <h1 class="upgrade-bold size36">Upgrade<span class="upgrade"> OpenType features</span></h1>
+            <div class="column34">
+                <h1 class="powerlift size36">Upgrade<span class="powerlift-outline"> OpenType features</span></h1>
             </div>
         </div>
         <div class="row">
@@ -271,55 +259,55 @@
             </div>
             <div class="column34 upgrade">
                 <p class="size24">
-                    TYPETR Upgrade family implements an extended OpenType feature set.
+                    TYPETR PowerLift family implements an extended OpenType feature set.
 
                     <h4>Standard ligatures [liga]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="no_liga">file, fjord, flow, loft (off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="liga">file, fjord, flow, loft (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="no_liga">file, fjord, flow, loft (off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="liga">file, fjord, flow, loft (on)</div>
                                         
                     <h4>CSS tabular figures [tnum]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">0123456789 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="tnum">0123456789 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">0123456789 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="tnum">0123456789 (on)</div>
                     
                     <h4>CSS oldstyle figures [onum]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">ABC 0123456789 abc (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="onum">ABC 0123456789 abc (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">ABC 0123456789 abc (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="onum">ABC 0123456789 abc (on)</div>
                     
                     <h4>CSS superior figures [sups]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="sups">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sups">A0B1C2D3E4F5G6H7I8J9 (on)</div>
                                         
                     <h4>CSS superior lowercase [sups]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="sups">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sups">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
 
                     <h4>CSS numerator figures [numr]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="numr">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="numr">A0B1C2D3E4F5G6H7I8J9 (on)</div>
 
                     <h4>CSS denomunator figures [dnom]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="dnom">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="dnom">A0B1C2D3E4F5G6H7I8J9 (on)</div>
                     
                     <h4>CSS inferior figures [sinf]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="sinf">A0B1C2D3E4F5G6H7I8J9 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">A0B1C2D3E4F5G6H7I8J9 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sinf">A0B1C2D3E4F5G6H7I8J9 (on)</div>
 
                     <h4>CSS inferior lowercase [sinf]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="sinf">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">AaBbCcDdEeFfGgHhIiJjKkLlMm... (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="sinf">AaBbCcDdEeFfGgHhIiJjKkLlMm... (on)</div>
 
                     <h4>Fractions [frac] using numerator/denominator figures</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">1/2 1/3 1/4 1/5 234/567 (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="frac"> 1/2 1/3 1/4 1/5 234/567 (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">1/2 1/3 1/4 1/5 234/567 (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="frac"> 1/2 1/3 1/4 1/5 234/567 (on)</div>
                     
                     <h4>CSS caps to small caps [c2sc]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="c2sc">Design is Detail Management (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="c2sc">Design is Detail Management (on)</div>
                     
                     <h4>CSS lowercase to small caps [smcp]</h4>
-                    <div style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
-                    <div style="line-height: 1.4em;font-size: 2em;" class="smcp">Design is Detail Management (on)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
+                    <div class="powerlift" style="line-height: 1.4em;font-size: 2em;" class="smcp">Design is Detail Management (on)</div>
                     
                     <h4>CSS caps to small caps [c2sc] + [smcp]</h4>
                     <div style="line-height: 1.4em;font-size: 2em;">Design is Detail Management (default off)</div>
@@ -337,8 +325,8 @@
                     <button class="buy-button upgrade" 
                         type="button"
                         fontdue-click="open-store-modal"
-                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ=="
-                        fontdue-store-select="U2t1OjE5MjA0OTUyMjgzOTg3NzQyOTM="
+                        fontdue-store-route="product/Rm9udENvbGxlY3Rpb246MTkyMDQ4NTAyOTI0Mzk1NjA0Ng=="
+                        fontdue-store-select="U2t1OjE5MjA0ODU4NTUxNDQzNTY2OTg="
                         >
                         Add to cart
                     </button>
