--- a/templates/responder-p.html
+++ b/templates/responder-p.html
@@ -533,8 +533,7 @@
     </section>
 
     <footer>
-        <p class="leading15">Bitcount, PowerLift, Presti, Productus, Proforma, Responder and Upgrade are registered trademarks of TYPETR | Buro Petr van Blokland + Claudia Mens<br/>
-        Copyright © 2025 TYPETR | Buro Petr van Blokland + Claudia Mens | <a href="licensing.html">Licensing</a> | <a href="legal.html">Terms, conditions &amp; privacy</a></p> 
+        <p class="leading15">Copyright © 2025 TYPETR | Buro&nbsp;Petr&nbsp;van&nbsp;Blokland&nbsp;+ Claudia&nbsp;Mens | <a href="licensing.html">Licensing</a> | <a href="legal.html">Terms, conditions &amp; privacy</a> | Bitcount, PowerLift, Presti, Productus, Proforma, Responder and Upgrade are registered trademarks of TYPETR</p> 
     </footer>
 
 
