--- a/templates/bitcount.html
+++ b/templates/bitcount.html
@@ -140,10 +140,11 @@
 
         <nav id="navbar" class="navbar">
             <ul>
+                <li><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></li>
                 <li><a href="index.html" class="current">Fonts</a></li>
                 <li><a href="custom.html">Custom</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
         <div class="hamburger" onclick="document.getElementById('box').style.display='block'">
@@ -154,10 +155,11 @@
     <div id="box" class="box">
         <nav id="menuBox" class="menuBox">
             <span class="close" onclick="document.getElementById('box').style.display='none'">&times;</span>
+            <h2><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></h2>
             <h2><a href="index.html">Fonts</a></h2>
             <h2><a href="custom.html">Custom</a></h2>
             <h2><a href="contact.html">Contact</a></h2>
-            <h2><fontdue-cart-button button-style="inline" label="Cart"></fontdue-cart-button></h2>
+            <h2><a href="about.html">About</a></h2>
         </nav>
     </div>
 
