--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1945,7 +1945,7 @@ header .navbar {
     float: right;
     padding: 4px;
     padding-right: 15px;
-    animation: slideLeft 0.4s ease-out forwards;
+    animation: fadeIn 0.4s ease-out forwards;
 }
 header .navbar ul {
     list-style-type: none;
