--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2508,13 +2508,16 @@ button.buy-button:hover {
   font-size: 32px;
 
   border: none; /* zorgt dat er geen border is */
+  box-shadow: 14px 14px 16px rgba(0, 0, 0, 0.2);
+
 }
 
 /* Hover */
 .cta-cart:hover {
   background-color: #E31C79;
-  transform: translateY(-1px);
-  box-shadow: 0 10px 28px rgba(0, 0, 0, 0.25);
+  transform: translateY(-5px);
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.2);
+
 }
 
 .specimen div {
